# lazyCode

./: .clang-format  .gitmodules  CMakeLists.txt  readme.md
example/: CMakeLists.txt  exampleUsage.cpp
include/lazyCode/: apply.h  basicCollectors.h  basicGenerators.h  collector.h  count.h  enumeratedRange.h  filterRange.h  fold.h  generator.h  lazyCode.h  lazyCodeOriginalAtempt.h  limitRange.h  mapRange.h  numberRange.h  print.h  printer.h  rangeBase.h  readRange.h  utils.h  write.h
single_header/: lazyCode.h  makeSingleHeader.py
src/: CMakeLists-ExternalProjects.txt  CMakeLists.txt
